--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,3 +1,9 @@
+<!-- Bootstrap CSS (Add this at the top) -->
+<link 
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+
 <!-- third party styles -->
 <!-- https://stylishthemes.github.io/Syntax-Themes/pygments/ -->
 <link 
