--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,3 +1,13 @@
+{% if include.lookup %}
+  {% assign news = site.data.newss
+    | where_exp: "news",
+      "news.id == include.lookup or news.title contains include.lookup"
+    | first
+  %}
+{% else %}
+  {% assign news = include %}
+{% endif %}
+
 <div class="news-container">
   <div class="news">
     {% if include.style == "rich" %}
@@ -30,9 +40,36 @@
         {{ news.title | default: "[no title info]" }}
       </a>
 
+      <div
+        class="news-authors"
+        {% if news.authors.size > 10 %}
+          data-tooltip="{{ news.authors | join: ", " | xml_escape }}"
+        {% endif %}
+        tabindex="0"
+      >
+        {{
+          news.authors
+          | join: ","
+          | split: ","
+          | array_carve: 5
+          | join: ", "
+          | markdownify
+          | remove: "<p>" | remove: "</p>"
+          | default: "[no author info]"
+        }}
+      </div>
+
       <div class="news-details">
+        <span class="news-publisher">
+          {{- news.publisher | default: "[no publisher info]" -}}
+        </span>
+        &nbsp;·&nbsp;
         <span class="news-date">
           {{- news.date | default: "[no date info]" | date: "%d %b %Y" -}}
+        </span>
+        &nbsp;·&nbsp;
+        <span class="news-id">
+          {{- news.id | default: "[no id info]" -}}
         </span>
       </div>
 
