--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -29,12 +29,12 @@ layout: default
 %}
 
 {% capture search -%}
-  research/?search={% for alias in aliases %}"{{ alias }}" {% endfor %}
+  publication/?search={% for alias in aliases %}"{{ alias }}" {% endfor %}
 {%- endcapture %}
 
 <p class="center">
   <a href="{{ search | relative_url | uri_escape }}">
-    Search for {{ page.name | default: page.title }}'s papers on the Research page
+    Search for {{ page.name | default: page.title }}'s papers on the Publication page
   </a>
 </p>
 
