--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,16 @@
         {% endif %}
       </span>
     {% endif %}
+    {% if site.logo-text != false %}
+      <span class="title-text" data-tooltip="Home">
+        {% if site.title and site.show-title != false %}
+          <span class="title">{{ site.title }}</span>
+        {% endif %}
+        {% if site.subtitle and site.show-subtitle != false %}
+          <span class="subtitle">{{ site.subtitle }}</span>
+        {% endif %}
+      </span>
+    {% endif %}
   </a>
 
   <input class="nav-toggle" type="checkbox" aria-label="show/hide nav">
