--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,5 +1,5 @@
-<h2>Lab Events – Upcoming Meetings</h2>
-
+<h2>Lab Meetings</h2>
+Lab meetings are held every Monday 9:00 AM to 11:00 AM (CST).
 <table class="events-table">
   <thead>
     <tr>
