--- a/_includes/meeting.html
+++ b/_includes/meeting.html
@@ -1,13 +1,13 @@
 <p>Lab meetings are held every Monday 9:00 AM to 11:00 AM (CST).</p>
 
-{% assign events_sorted = site.data.events.events | sort: "date" %}
-{% assign events_by_year = events_sorted | group_by_exp: "e", "e.date | slice: 0, 4" %}
-{% assign events_by_year = events_by_year | reverse %}
+{% assign meetings_sorted = site.data.meetings.meetings | sort: "date" %}
+{% assign meetings_by_year = meetings_sorted | group_by_exp: "e", "e.date | slice: 0, 4" %}
+{% assign meetings_by_year = meetings_by_year | reverse %}
 
-{% for y in events_by_year %}
+{% for y in meetings_by_year %}
   <h3>{{ y.name }}</h3>
 
-  <table class="events-table">
+  <table class="meetings-table">
     <thead>
       <tr>
         <th>Date</th>
@@ -17,12 +17,12 @@
       </tr>
     </thead>
     <tbody>
-      {% for event in y.items %}
+      {% for meeting in y.items %}
       <tr>
-        <td>{{ event.date }}</td>
-        <td>{{ event.presenter }}</td>
-        <td>{{ event.topic }}</td>
-        <td>{{ event.location }}</td>
+        <td>{{ meeting.date }}</td>
+        <td>{{ meeting.presenter }}</td>
+        <td>{{ meeting.topic }}</td>
+        <td>{{ meeting.location }}</td>
       </tr>
       {% endfor %}
     </tbody>
