--- a/_includes/conference.html
+++ b/_includes/conference.html
@@ -1,26 +1,28 @@
-{% assign meetings_sorted = site.data.meetings.meetings | sort: "date" %}
-{% assign meetings_by_year = meetings_sorted | group_by_exp: "e", "e.date | slice: 0, 4" %}
-{% assign meetings_by_year = meetings_by_year | reverse %}
+{% assign conferences_sorted = site.data.conferences.conferences | sort: "date" %}
+{% assign conferences_by_year = conferences_sorted | group_by_exp: "e", "e.date | slice: 0, 4" %}
+{% assign conferences_by_year = conferences_by_year | reverse %}
 
-{% for y in meetings_by_year %}
+{% for y in conferences_by_year %}
   <h3>{{ y.name }}</h3>
 
-  <table class="meetings-table">
+  <table class="conferences-table">
     <thead>
       <tr>
-        <th>Date</th>
-        <th>Presenter</th>
-        <th>Topic</th>
+        <th>Conference</th>
         <th>Location</th>
+        <th>Date</th>
+        <th>Deadline</th>
+        <th>Link</th>
       </tr>
     </thead>
     <tbody>
-      {% for meeting in y.items %}
+      {% for conference in y.items %}
       <tr>
-        <td>{{ meeting.date }}</td>
-        <td>{{ meeting.presenter }}</td>
-        <td>{{ meeting.topic }}</td>
-        <td>{{ meeting.location }}</td>
+        <td>{{ conference.name }}</td>
+        <td>{{ conference.location }}</td>
+        <td>{{ conference.date }}</td>
+        <td>{{ meeting.deadline }}</td>
+        <td>{{ meeting.link }}</td>
       </tr>
       {% endfor %}
     </tbody>
