--- a/_includes/conference.html
+++ b/_includes/conference.html
@@ -21,8 +21,8 @@
         <td>{{ conference.name }}</td>
         <td>{{ conference.location }}</td>
         <td>{{ conference.date }}</td>
-        <td>{{ meeting.deadline }}</td>
-        <td>{{ meeting.link }}</td>
+        <td>{{ conference.deadline }}</td>
+        <td>{{ conference.link }}</td>
       </tr>
       {% endfor %}
     </tbody>
