--- a/_includes/conference.html
+++ b/_includes/conference.html
@@ -21,7 +21,7 @@
         <td>{{ conference.location }}</td>
         <td>{{ conference.date }}</td>
         <td>{{ conference.deadline }}</td>
-        <td>{{ conference.link }}</td>
+        <td><a href="{{ conference.link }}" target="_blank">{{ conference.link }}</a></td>
       </tr>
       {% endfor %}
     </tbody>
