--- a/_includes/conference.html
+++ b/_includes/conference.html
@@ -1,4 +1,4 @@
-{% assign conferences_sorted = site.data.conferences.conferences | sort: "date" | reverse %}
+{% assign conferences_sorted = site.data.conferences | sort: "date" | reverse %}
 {% assign conferences_by_year = conferences_sorted | group_by_exp: "e", "e.date | slice: 0, 4" %}
 
 {% for y in conferences_by_year %}
